# zappool-backend

./: .gitignore  Cargo.toml  LICENSE  README.md  env-sample
.github/workflows/: build_datum.yml  build_test.yml  build_test_rust.yml
common/: common_main.py
common-rs/: Cargo.toml
common-rs/src/: common.rs  common_db.rs  db_pc.rs  db_ws.rs  dto_pc.rs  dto_ws.rs  error_codes.rs  lib.rs  username.rs
ocean-gateway/: .gitignore  README.md  gateway-hooked_v041_705a297.patch  hooks-v040.bcf7547.patch  hooks-v040.c4d57a4.patch  setup_datum_gateway.sh
ocean-gateway/config/: config-sample.json  datum-gateway.service  nginx_site.config
oceanmgr/: .gitignore  README.md  requirements.txt
oceanmgr/config/: zappool-oceanmgr.service
oceanmgr/src/: __setup_db.py  db_oc.py  dto_oc.py  get_earnings_main.py  html_parse.py  ocean.py  ocean_web.py  print_earnings_main.py
paycalc-rs/: Cargo.toml  README.md
paycalc-rs/config/: zappool-paycalc-rs.service
paycalc-rs/src/: common.rs  common_db.rs  db_oc.rs  db_pc.rs  dto_oc.rs  dto_pc.rs  error_codes.rs  lib.rs  ln_address.rs  nostr_profile.rs  nostr_user.rs  paycalc_earn.rs  paycalc_payreq.rs  payer.rs  payment_method.rs
paycalc-rs/src/__setup_db/: main.rs
paycalc-rs/src/main/: main.rs
paycalc-rs/src/main_dashboard/: main.rs
paycalc-rs/src/main_list_work/: main.rs
paycalc-rs/src/main_stats/: main.rs
paycalc-rust/: Cargo.toml  README.md
paycalc-rust/config/: zappool-paycalc-rs.service
paycalc-rust/src/: cln_pay.rs  common.rs  db_oc.rs  db_pc.rs  db_ws.rs  dto_oc.rs  dto_pc.rs  dto_ws.rs  lib.rs  ln_address.rs  main.rs  paycalc_earn.rs  paycalc_payreq.rs
paycalc-rust/src/__setup_db/: main.rs
paycalc-rust/src/main/: main.rs
paycalc-rust/src/main_dashboard/: main.rs
paycalc-rust/src/main_dummy/: main.rs
paycalc-rust/src/main_list_work/: main.rs
payer/: Cargo.toml
payer/src/: common.rs  lib.rs  ln_address.rs  nostr_profile.rs  nostr_zap.rs  payer.rs
payer/src/main_nsec_tool/: main.rs  nsecstore_tool.rs
payer/src/main_try_zap/: main.rs
scripts/: backup_data.sh
stratum-hooked/: Cargo.toml
stratum-hooked/src/: client_stub.rs  hook.rs  main.rs  test_workstat_int.rs  tests.rs
workstat/: README.md  README_API.md  requirements.txt
workstat-rs/: Cargo.toml  README.md  README_API.md
workstat-rs/config/: zappool-workstat-rs.service
workstat-rs/src/: db_ws.rs  lib.rs  server.rs  tests.rs
workstat-rs/src/__setup_db/: main.rs
workstat-rs/src/main/: main.rs  tests.rs
workstat-rs/src/main_list/: main.rs
workstat/config/: zappool-workstat.service
workstat/src/: api.py  db_ws.py  dto_ws.py  main.py  main_list.py  main_test.py  test_api.py
workstat_BAK/: .gitignore  README_API.md  requirements.txt
workstat_BAK/config/: zappool-workstat.service
workstat_BAK/src/: __setup_db.py  db_ws.py  main.py  main_list.py  main_test.py  test_api.py
