[package]
name = "paycalc-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
common-rs = { path = "../common-rs" }
dotenv = "0.15.0"
payer = { path = "../payer" }
rusqlite = "0.37.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "main"
path = "src/main/main.rs"

[[bin]]
name = "__setup_db"
path = "src/__setup_db/main.rs"

[[bin]]
name = "main_dashboard"
path = "src/main_dashboard/main.rs"

[[bin]]
name = "main_list_work"
path = "src/main_list_work/main.rs"
