[package]
name = "payer"
version = "1.0.2"
edition = "2024"

[dependencies]
bech32 = "0.9"
cln-rpc = "0.5.0"
common-rs = { path = "../common-rs" }
dotenv = "0.15"
futures-util = "0.3"
hex-conservative = "0.3.0"
nostr = { version = "0.44.2", features = ["nip57"] }
reqwest = { version = "0.13", features = ["json"] }
rpassword = "7.4.0"
rusqlite = "0.37"
secp256k1 = "0.29"
seedstore = { version = "1.1.0", features = ["accesssecret"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }
urlencoding = "2.1"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "payer_nsec_tool"
path = "src/main_nsec_tool/main.rs"

[[bin]]
name = "payer_try_zap"
path = "src/main_try_zap/main.rs"
