[package]
name = "stratum-hooked"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stratumv1-proxy-rs = "0.2.1"
tokio = { version = "1.40", features = ["full"] }
