[package]
name = "stratum-hooked"
version = "1.2.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
common-rs = { path = "../common-rs" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
stratumv1-proxy-rs = "0.3.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
rusqlite = "0.37.0"
serial_test = "3.4.0"
stratumv1-proxy-rs = { version = "0.3.0", features = ["teststubs"] }
tempfile = "3"
workstat-rs = { path = "../workstat-rs" }
