[package]
name = "workstat-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
common-rs = { path = "../common-rs" }
axum = "0.7"
dotenv = "0.15.0"
rusqlite = "0.37.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
tempfile = "3"

[[bin]]
name = "main"
path = "src/main/main.rs"

[[bin]]
name = "__setup_db"
path = "src/__setup_db/main.rs"

[[bin]]
name = "main_list"
path = "src/main_list/main.rs"
