[package]
name = "workstat-rs"
version = "1.0.0"
edition = "2024"

[dependencies]
common-rs = { path = "../common-rs" }
axum = "0.7"
dotenv = "0.15"
rusqlite = "0.37"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = { version = "0.13", features = ["json"] }
serial_test = "3.4"
tempfile = "3"

[[bin]]
name = "workstat"
path = "src/main/main.rs"

[[bin]]
name = "__workstat_setup_db"
path = "src/__setup_db/main.rs"

[[bin]]
name = "workstat_list"
path = "src/main_list/main.rs"
